[tool.poetry]
name = "ytkt"
version = "0.1.0"
description = ""
authors = ["Blake Hyde <blake@junipersquare.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyright = "^1.1.232"
black = "^22.1.0"
mypy = "^0.942"
types-PyYAML = "^6.0.5"

[tool.poetry.scripts]
ytkt = "ytkt.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
